# demoSubmodule

./: .gitignore  .gitmodules  CMakeLists.txt  README  afterbuild.sh  prebuild.sh
gdb_demo/: CMakeLists.txt  README  main.cpp
src/: CMakeLists.txt  main.cpp
src/base64module/: CMakeLists.txt  base64.cpp  base64.h
src/boosttest/: CMakeLists.txt  boost_ptr.cpp
src/mymodule/: CMakeLists.txt  mymodule.cpp  mymodule.h
src/rpc/: CMakeLists.txt  proc1.c  proc2.c
src/sogo-workflow/: CMakeLists.txt  helloworld.cpp  redis_cli.cpp  wget.cpp  wget_to_redis.cpp
src/test/: test_boost.cpp  test_main.cpp  test_testF.cpp
src/testboost/: CMakeLists.txt  boost_server.cpp  boost_socket.cpp  timer.cpp
src/watchdog/: CMakeLists.txt  target_process.cc  watchdog.cc
workflow-step-by-step/src/: CMakeLists.txt
workflow-step-by-step/src/algorithm/: CMakeLists.txt  DNSRoutine.cc  DNSRoutine.h  MapReduce.h  MapReduce.inl
workflow-step-by-step/src/factory/: CMakeLists.txt  HttpTaskImpl.cc  WFConnection.h  WFOperator.h  WFTask.h  WFTask.inl  WFTaskError.h  WFTaskFactory.cc  WFTaskFactory.h  WFTaskFactory.inl  Workflow.cc  Workflow.h
workflow-step-by-step/src/kernel/: CMakeLists.txt  CommRequest.cc  CommRequest.h  CommScheduler.cc  CommScheduler.h  Communicator.cc  Communicator.h  ExecRequest.h  Executor.cc  Executor.h  IORequest.h  IOService_linux.cc  IOService_linux.h  SleepRequest.h  SubTask.cc  SubTask.h  clienttest.c  linux_aio.cc  linux_aio_utils.cc  list.h  mpoller.c  mpoller.h  poller.c  poller.h  pollertest.c  rbtree.c  rbtree.h  rbtreetest.c  testpool.c  thrdpool.c  thrdpool.h
workflow-step-by-step/src/manager/: CMakeLists.txt  DNSCache.cc  DNSCache.h  EndpointParams.h  RouteManager.cc  RouteManager.h  UpstreamManager.cc  UpstreamManager.h  WFConnection.h  WFFuture.h  WFGlobal.cc  WFGlobal.h
workflow-step-by-step/src/protocol/: CMakeLists.txt  HttpMessage.cc  HttpMessage.h  HttpUtil.cc  HttpUtil.h  ProtocolMessage.h  http_parser.c  http_parser.h
workflow-step-by-step/src/test/: CMakeLists.txt  executor.cc  logger.h  pollertest.c  rbtreetest.c  spdlog.cc  threadtask.cc  timertasktest.cc
workflow-step-by-step/src/tutorial/: CMakeLists.txt  tutorial-01-wget.cc
workflow-step-by-step/src/util/: CMakeLists.txt  EncodeStream.cc  EncodeStream.h  LRUCache.h  MD5Util.cc  MD5Util.h  Mutex.h  StringUtil.cc  StringUtil.h  URIParser.cc  URIParser.h  logger.cc  logger.h
